# tfi-gtfs

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  settings.env
src/tfi_gtfs/: __init__.py  __main__.py  logger.py  settings.py  web_routes.py
src/tfi_gtfs/gtfs/: __init__.py  calendar_tools.py  constants.py  downloader.py  gtfs.py  panda_size.py  realtime_data.py  static_assets.py  static_assets_redis.py  storage.py  utils.py
src/tfi_gtfs/web_server/: __init__.py  format.py  server.py  utils.py
src/tfi_gtfs/web_server/templates/: debug.html  homepage.html  main.css  main.js
tests/: download_test_data.sh  test_download_agent.py  test_panda_sizer.py  test_realtime_data_parser.py  test_static_asset_parser.py  test_storage.py  test_web_server.py
